Creacion del navBar y logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Blog post sobre las IAs que estan rondado por el mundo haciendo un mundo mas practico , conoce su historia y ponlas a prueba" />
+    <meta
+      name="description"
+      content="Blog post sobre las IAs que estan rondado por el mundo haciendo un mundo mas practico , conoce su historia y ponlas a prueba"
+    />
     <meta name="keywords" content="Blog , IA,AI,chatGPT,Dalle2, JS, javascript,html,css, bootstrap" />
     <meta name="author" content="Choque Leonel Ezequiel" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
@@ -13,7 +16,45 @@
     <title>Blog IAs</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar navbar-dark navbar-expand-lg">
+        <div class="container">
+          <div class="d-flex text-center align-items-center">
+            <div class="d-flex flex-column p-2">
+              <div class="bordeCubo">
+                <div class="cubo"></div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div class="mano-i"></div>
+                <div class="mano-d"></div>
+              </div>
+            </div>
+            <a class="navbar-brand text-center ms-2" href="#"
+              >Blog Post <br />
+              IAs</a
+            >
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto fs-3">
+              <a class="nav-link active" aria-current="page" href="#">Inico</a>
+              <a class="nav-link" href="#">Contactos</a>
+              <a class="nav-link" href="#">Acerca de nosotros</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
