Creacion del footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,58 @@
       </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer class="p-5">
+      <section class="text-white row row-cols-1 row-cols-sm-3 ">
+        <aside>
+          <div class="d-flex text-center justify-content-center align-items-center">
+            <div class="d-flex flex-column p-2">
+              <div class="bordeCubo">
+                <div class="cubo"></div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div class="mano-i"></div>
+                <div class="mano-d"></div>
+              </div>
+            </div>
+            <a class="text-white text-decoration-none text-center ms-2" href="#"
+              >Blog Post <br />
+              IAs</a
+            >
+          </div>
+        </aside>
+        <aside>
+          <h4 class="text-decoration-underline text-center text-md-start">Navegacion</h4>
+          <ul>
+            <li class="list-unstyled"><a class="text-secondary text-decoration-none" href="#"> Inicio </a></li>
+            <li class="list-unstyled"><a class="text-secondary text-decoration-none" href="#"> Contactos </a></li>
+            <li class="list-unstyled"><a class="text-secondary text-decoration-none" href="#"> Acerca de nosotros </a></li>
+          </ul>
+        </aside>
+        <aside>
+          <h4 class="text-decoration-underline text-center text-md-start">Redes</h4>
+          <div class="text-center text-md-start">
+            <a href="#" class="link-secondary"
+              ><i class="bi bi-facebook fs-4"></i
+            ></a>
+            <a href="#" class="link-secondary">
+              <i class="bi bi-twitter fs-4 mx-2"></i
+            ></a>
+            <a href="#" class="link-secondary"
+              ><i class="bi bi-instagram fs-4 me-2"></i
+            ></a>
+            <a href="#" class="link-secondary">
+              <i class="bi bi-whatsapp fs-4"></i
+            ></a>
+          </div>
+        </aside>
+      </section>
+      <section class="text-secondary text-center">
+        <aside>
+          <hr/>
+          &copy;Derechos reservados 2023
+        </aside>
+      </section>
+    </footer>
   </body>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/app.js"></script>
